@@ -17,55 +17,221 @@
 :
 : type_filter_options - a multiline list of the aliases, includes, and a comment
 :                       to list all the types associated with the alias
+######################################################################
 [psana]
 
+# MODULES: any modules that produce data to be translated need be loaded 
+# **BEFORE** Translator.H5Output (such as calibrated data or NDArray's)
+# event data added by modules listed after Translator.H5Output is not translated.
 modules = Translator.H5Output
-files = **TODO: PUT YOUR INPUT FILES HERE**
 
+files = **TODO: SPECIFY INPUT FILES OR DATA SOURCE HERE**
+
+######################################################################
 [Translator.H5Output]
+
 # TODO: enter the full h5 output file name, including the output directory
 output_file = output_directory/h5output.h5
 
+# # # # # # # # # # # # # # # # # # # # #
+# EPICS FILTERING
+# The Translator defaults to store all Epics Pv's:
+
+store_epics = true
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# TYPE FILTERING 
+#
+# One can include or exclude a class of Psana types with the following 
+# options. Only the strings include or exclude are valid for these 
+# type filtering options. 
+# 
+# Note - Epics in the list below refers only to the epicsConfig data
+# which is the alias list, not the epics pv's (see store_epics above for those)
+
+{{type_filter_options}}
+
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# SOURCE FILTERING
+#
+# The default for the src_filter option is "include all"
+# If you want to include a subset of the sources, do
+#
+# src_filter include srcname1 srcname2  
+#
+#  or if you want to exclude a subset of sources, do
+#
+# src_filter exclude srcname1 srcname2
+#
+# The srcname's in xtc input can be printed using the EventKeys
+# module.  For example
+#
+# psana -n 5 -m EventKeys exp=cxi1235:run=33 
+#
+# Will print the EventKeys in the first 5 events.  If the output includes
+#
+#   EventKey(type=Psana::EvrData::DataV3, src=DetInfo(NoDetector.0:Evr.2))
+#   EventKey(type=Psana::CsPad::DataV2, src=DetInfo(CxiDs1.0:Cspad.0))
+#   EventKey(type=Psana::CsPad2x2::ElementV1, src=DetInfo(CxiSc2.0:Cspad2x2.1))
+#   EventKey(type=Psana::Bld::BldDataEBeamV3, src=BldInfo(EBeam))
+#   EventKey(type=Psana::Bld::BldDataFEEGasDetEnergy, src=BldInfo(FEEGasDetEnergy))
+#   EventKey(type=Psana::Camera::FrameV1, src=BldInfo(CxiDg2_Pim))
+#
+# Then one can filter on these six srcname's:
+#
+#  NoDetector.0:Evr.2  CxiDs1.0:Cspad.0  CxiSc2.0:Cspad2x2.1  EBeam  FEEGasDetEnergy  CxiDg2_Pim
+#
+
+src_filter = include all
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# CALIBRATION FILTERING
+#
+# Psana calibration modules can produce a calibrated version of CsPad data
+# (The data types CsPad::DataV1 or CsPad::DataV2). The module output will be 
+# data of the same type and src as the uncalibrated data, with an additional key, 
+# such as 'calibrated'.
+#
+# The Translator defaults to skipping the translation of the uncalibrated
+# data when a calibrated version of that data is present.  Below you 
+# can control the calibration key and whether or not to include the
+# uncalibrated data.
+
+calibration_key = calibrated
+include_uncalibrated_data = false
+
+# Note: this only affects calibrated data of the same type and src as the
+# uncalibrated data.  When the calibration module produces a NDArray, both
+# the NDArray and the uncalibrated data are translated.  If you do not wish
+# to translate the uncalibrated data, use appropriate type or src_filter options.
+# Likewise if you do not want to translate certain NDArray's, see the 
+# ndarray_key_filter options below.
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# NDARRAY AND STD::STRING KEY FILTERING
+#
+# A number of NDArray's and any std::string found in the event store are translated into 
+# the hdf5 file.  NDarray's up to 4 dimensions of 10 basic types (8, 16, 32 and 64 bit 
+# signed and unsigned int, float and double) are translated, but see the comment after the 
+# ndarray_types option in the type filtering section for the most up to date list.
+#
+# These NDArray's and std::string's can be filtered by specifying the eventKey key that was
+# used to put the data in the event.  While a srcname and key uniquely distinguish data in the
+# event store, the Translator filter's NDArray's and std::string's using only the
+# key string. The default is to include all ndarray's and std::string's found:
+
+ndarray_key_filter = include all
+std_string_key_filter = include all
+
+# an example of including only one ndarray (with keystring being 'finalanswer') would be
+#
+# ndarray_key_filter include finalanswer
+#
+# and several ndarrays or strings can be included or excluded
+#
+# ndarray_key_filter = exclude arrayA arrayB
+# std_string_key_filter = include message1 eventDescription
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
+# COMPRESSION 
+#
+# The following options control compression for most all datasets.
+# Shuffling improves compression for certain datasets. Valid values for
+# deflate (gzip compression level) are 0-9. Setting deflate = -1 turns off
+# compression.
+
+shuffle = True
+deflate = 1
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# TECHNICAL, ADVANCED CONFIGURATION
+# 
+# ---------------------------------------
+# CHUNKING
+# The commented options below give the default chunking options.
+# Objects per chunk are selected from the target chunk size (16 MB) and 
+# adjusted based on min/max objects per chunk, and the max bytes per chunk.
+# It is important that the chunkCache (created on a per dataset basis) be 
+# large enough to hold at least one chunk, ideally all chunks we need to have
+# open at one time when writing to the dataset (usually one, unless we repair
+# split events):
+ 
+# chunkSizeTargetInBytes = 1703936 (16MB)
+# chunkSizeTargetObjects = 0 (0 means select objects per chunk from chunkSizeInBytes)
+# maxChunkSizeInBytes = 10649600  (100MB)
+# minObjectsPerChunk = 50              
+# maxObjectsPerChunk = 2048
+# chunkCacheSizeTargetInChunks = 3
+# maxChunkCacheSizeInBytes = 10649600  (100MB)
+
+# ---------------------------------------
+# REFINED DATASET CONTROL
+#
+# There are six classes of datasets for which individual options for shuffle,
+# deflate, chunkSizeTargetInBytes and chunkSizeTargetObjects can be specified:
+#
+# regular (most everything, all psana types)
+# epics (all the epics pv's)
+# damage (accompanies all regular data from event store)
+# ndarrays (new data from other modules)
+# string's (new data from other modules)
+# eventId (the time dataset that also accompanies all regular data, epics pvs, ndarrays and strings)
+#
+# The options for regular datasets have been discussed above. The other five datasets 
+# get their default values for shuffle, deflate, chunkSizeInBytes and chunkSizeInObjects
+# from the regular dataset options except in the cases below:
+ 
+# damageShuffle = false
+# stringShuffle = false
+# epicsPvShuffle = false
+# stringDeflate = -1
+# eventIdChunkSizeTargetInBytes = 16384
+# epicsPvChunkSizeTargetInBytes = 16384
+
+# The rest of the shuffle, deflate and chunk size options for the other five datasets are:
+#
+# eventIdShuffle = true
+# eventIdDeflate = 1
+# damageDeflate = 1
+# epicsPvDeflate = 1
+# ndarrayShuffle = true
+# ndarrayDeflate = 1
+# eventIdChunkSizeTargetObjects = 0
+# damageChunkSizeTargetInBytes = 1703936
+# damageChunkSizeTargetObjects = 0
+# stringChunkSizeTargetInBytes = 1703936
+# stringChunkSizeTargetObjects = 0
+# ndarrayChunkSizeTargetInBytes = 1703936
+# ndarrayChunkSizeTargetObjects = 0
+# epicsPvChunkSizeTargetObjects = 0
+
+# ---------------------------------------
+# SPLIT EVENTS
 # When the Translator encounters a split event, it checks a cache to see
 # if it has already seen it.  If it has, it fills in any blanks that it can.
 # To prevent this cache from growing to large, set the maximum number of
 # split events to look back through here (default is 3000):
+
 max_saved_split_events = 3000
 
-#############
-# store epics
-epics_store = true
-
+# ---------------------------------------
+# HDF5 GROUP NAMES
 # The typenames for beam line data defaults to being written as (for example) 
 # Bld::BldDataEBeamV0. Setting short_bld_name to true causes it to be 
-# written as BldDataEBeamV0.
+# written as BldDataEBeamV0. If set to true, names are written differently
+# then with o2o-translate and the change may break code that reads h5 files 
+# (such as psana)
 
 short_bld_name = false
 
-####################################################################
-# Type filtering
-# one can include or exclude a class of Psana types with the following 
-# options. Only the the strings include or exclude are valid for these 
-# type filtering options.  Comments and blanks will be stripped from the 
-# line by the Translator module.
-
-
-{{type_filter_options}}
-
-########################################################################
-# Source filtering
+# ---------------------------------------
+# HDF5 FILE PROPERTIES
 #
-#  The default for the src_filter option is "include all"
-# If you want to include a subset of the sources, do
-# src_filter include srcname1 srcname2  
-#  or if you want to exclude a subset of sources, do
-# src_filter exclude srcname1 srcname2
-# where srcname are the group names associated with the source.
-
-src_filter = include all
-
-calibration_key = calibrated
-include_uncalibrated_data = false
+# split large files, presently we only support NoSplit. Future options may be: Family and SplitScan
+# for future splitting, splitSize defaults to 10 GB
+split = NoSplit    
+splitSize = 10737418240      
 
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 ::::template:::: type_aliases_cpp
@@ -86,19 +252,21 @@ include_uncalibrated_data = false
 {% for baseheader in base_headers %}
 #include "psddl_psana/{{baseheader}}"
 {% endfor %}
+#include "ndarray/ndarray.h"
 
 using namespace Translator;
 using namespace std;
 
 TypeAliases::TypeAliases() {
 {% for entry in type_aliases %}
-  set<const type_info *> {{entry.alias}};
+  TypeInfoSet {{entry.alias}};
 {% for type in entry.typeList %}
   {{entry.alias}}.insert( & typeid({{type}}));
 {% endfor %}
   m_alias2TypesMap["{{entry.alias}}"] = {{entry.alias}};
 
 {% endfor %}
+
   Alias2TypesMap::iterator pos;
   for (pos = m_alias2TypesMap.begin(); pos != m_alias2TypesMap.end(); ++pos) {
     m_aliasKeys.insert(pos->first);
@@ -134,16 +302,20 @@ psddl/data/templates/hdf5Translator.tmpl?hdfwritermap_cpp
 
 #include "PSEvt/EventKey.h"
 #include "PSEvt/TypeInfoUtils.h"
+#include "Translator/HdfWriterFromEvent.h"
 #include "Translator/HdfWriterMap.h"
 #include "MsgLogger/MsgLogger.h"
 {% for header in base_headers %}
 #include "psddl_hdf2psana/{{header}}"
 {% endfor %}
-
+#include "Translator/HdfWriterNDArray.h"
+#include "Translator/HdfWriterStringFromEvent.h"
+ 
 using namespace std;
 
 namespace {
 
+const char *logger = "Translator.HdfWriterMap";
 const int latestTypeSchema = -1;
 
 using namespace Translator;
@@ -152,28 +324,18 @@ using namespace psddl_hdf2psana;
 using namespace psddl_hdf2psana::{{namespace}};
 {% endfor %}
 
-template <class T>
-void checkType(const PSEvt::EventKey &eventKey, const char *logger) {
-  const std::type_info & templateType = typeid(T);
-  if (templateType != *eventKey.typeinfo()) {
-    MsgLog(logger, error, "eventKey: " << eventKey << " type mismatch with template type: " 
-           << PSEvt::TypeInfoUtils::typeInfoRealName(&templateType));
-  }
-}
 
 template<typename T>
-class HdfWriter : public HdfWriterBase {
+class HdfWriterPsana : public HdfWriterFromEvent {
 public:
   void make_datasets(DataTypeLoc dataTypeLoc, hdf5pp::Group & srcGroup, 
                      const PSEvt::EventKey & eventKey, 
                      PSEvt::Event & evt, PSEnv::Env & env,
                      bool shuffle, int deflate,
-                     boost::shared_ptr<psddl_hdf2psana::ChunkPolicy> chunkPolicy)
+                     boost::shared_ptr<Translator::ChunkPolicy> chunkPolicy)
   {
-    checkType<T>(eventKey, "HdfWriter");
-    boost::shared_ptr<T> ptr;
-    if (dataTypeLoc == inEvent) ptr = evt.get(eventKey.src(), eventKey.key()); 
-    else if (dataTypeLoc == inConfigStore) ptr = env.configStore().get(eventKey.src());
+    boost::shared_ptr<T> ptr = getFromEventStore<T>(eventKey, dataTypeLoc, evt, env);
+    MsgLog(logger, trace, "HdfWriter<" << PSEvt::TypeInfoUtils::typeInfoRealName(& typeid(T) ) << ">::make_datasets in group: " << srcGroup.name());
     ::make_datasets(*ptr,srcGroup,*chunkPolicy,deflate,shuffle,latestTypeSchema);
   }
 
@@ -183,10 +345,7 @@ public:
              PSEvt::Event & evt, 
              PSEnv::Env & env) 
   {
-    checkType<T>(eventKey, "HdfWriter");
-    boost::shared_ptr<T> ptr;
-    if (dataTypeLoc == inEvent) ptr = evt.get(eventKey.src(), eventKey.key()); 
-    else if (dataTypeLoc == inConfigStore) ptr = env.configStore().get(eventKey.src());
+    boost::shared_ptr<T> ptr = getFromEventStore<T>(eventKey, dataTypeLoc, evt, env);
     ::store(*ptr,srcGroup,latestTypeSchema); 
   }
   
@@ -195,10 +354,7 @@ public:
                 const PSEvt::EventKey & eventKey, 
                 PSEvt::Event & evt, 
                 PSEnv::Env & env) {
-    checkType<T>(eventKey, "HdfWriter");
-    boost::shared_ptr<T> ptr; 
-    if (dataTypeLoc == inEvent) ptr = evt.get(eventKey.src(), eventKey.key()); 
-    else if (dataTypeLoc == inConfigStore) ptr = env.configStore().get(eventKey.src());
+    boost::shared_ptr<T> ptr = getFromEventStore<T>(eventKey, dataTypeLoc, evt, env);
     ::store_at(ptr.get(),srcGroup, index, latestTypeSchema); 
   }
 
@@ -206,10 +362,7 @@ public:
               hdf5pp::Group & srcGroup, const PSEvt::EventKey & eventKey, 
               PSEvt::Event & evt, PSEnv::Env & env) 
   {
-    checkType<T>(eventKey, "HdfWriterFrom");
-    boost::shared_ptr<T> ptr; 
-    if (dataTypeLoc == inEvent) ptr = evt.get(eventKey.src(), eventKey.key()); 
-    else if (dataTypeLoc == inConfigStore) ptr = env.configStore().get(eventKey.src());
+    boost::shared_ptr<T> ptr = getFromEventStore<T>(eventKey, dataTypeLoc, evt, env);
     ::store_at(ptr.get(), srcGroup, indexForAppend, latestTypeSchema);
   }
 
@@ -219,15 +372,15 @@ public:
     ::store_at(ptrForBlank,group, indexForAppend, latestTypeSchema);
   }
   static const long indexForAppend = -1;
-};  // class HdfWriter<T>
+};  // class HdfWriterPsana<T>
 
 
 } // local namespace 
 
 namespace Translator {
 
-boost::shared_ptr<HdfWriterBase> getHdfWriter(HdfWriterMap & mapping, const std::type_info *typeInfoPtr) {
-  //  static map<HdfWriterBase*,set<std::type_info*> > convertersNotFound;
+boost::shared_ptr<HdfWriterFromEvent> getHdfWriter(HdfWriterMap & mapping, const std::type_info *typeInfoPtr) {
+  //  static map<HdfWriterFromEvent*,set<std::type_info*> > convertersNotFound;
    HdfWriterMap::iterator pos = mapping.find(typeInfoPtr);
   if (pos == mapping.end()) {
     // TODO: move this log message into H5Output
@@ -241,15 +394,22 @@ boost::shared_ptr<HdfWriterBase> getHdfWriter(HdfWriterMap & mapping, const std:
     //        convertersNotFound.insert(typeInfoPtr);
     //      }
     //    }
-    return boost::shared_ptr<Translator::HdfWriterBase>();
+    return boost::shared_ptr<Translator::HdfWriterFromEvent>();
   }
   return pos->second;
 }
 
 void initializeHdfWriterMap( HdfWriterMap & mapping) {
 {% for psana_type in psana_types %}
-  mapping[ & typeid({{psana_type}}) ] = boost::make_shared<HdfWriter<{{psana_type}}> >();
+  mapping[ & typeid({{psana_type}}) ] = boost::make_shared<HdfWriterPsana<{{psana_type}}> >();
 {% endfor %}
+
+  // ndarrays
+{% for elem, ndim in elemDimPairs %}
+  mapping[ & typeid(ndarray< {{elem}}, {{ndim}}>) ] = boost::make_shared<HdfWriterNDArray< {{elem}}, {{ndim}} > >();  
+{% endfor %}
+  // string               
+  mapping[ & typeid(std::string) ] = boost::make_shared<HdfWriterStringFromEvent>();
 }
 
 } // Translator namespace
@@ -356,11 +516,22 @@ void copyValueFldToUnrolled < Unroll::EpicsPvCtrlString >
        (const Unroll::EpicsPvCtrlString::PsanaSrc &psanaVar, int16_t el, 
         Unroll::EpicsPvCtrlString & unrollBuffer);
 
+template <>
+void copyValueFldToUnrolled < Unroll::EpicsPvCtrlEnum >
+       (const Unroll::EpicsPvCtrlEnum::PsanaSrc &psanaVar, int16_t el, 
+        Unroll::EpicsPvCtrlEnum & unrollBuffer);
+
 hid_t createH5TypeId_epicsTimeStamp();
 
- {% for epicsPv in epicsPvs %}
+{% for epicsPv in epicsPvs %}
 hid_t createH5TypeId_{{epicsPv['name']}}({{epicsPv['type_create_args']}});
 {% endfor %} 
+
+template <class U>
+int getNumberStringsForCtrlEnum(boost::shared_ptr<typename U::PsanaSrc> ptr) { return -1; }
+ 
+template <>
+int getNumberStringsForCtrlEnum<Unroll::EpicsPvCtrlEnum>(boost::shared_ptr<Unroll::EpicsPvCtrlEnum::PsanaSrc> ptr);
 
 } // namespace Translator
 
@@ -438,6 +609,17 @@ void copyValueFldToUnrolled < Unroll::EpicsPvCtrlString >
   strncpy(unrollBuffer.value, psanaVar.value(el), Psana::Epics::MAX_STRING_SIZE);
 }
 
+template <>
+void copyValueFldToUnrolled < Unroll::EpicsPvCtrlEnum >
+       (const Unroll::EpicsPvCtrlEnum::PsanaSrc &psanaVar, int16_t el, 
+        Unroll::EpicsPvCtrlEnum & unrollBuffer) {
+  int numberOfStrs = psanaVar.dbr().no_str();
+  void * valueAddress = &unrollBuffer.strs[numberOfStrs];
+  uint16_t * valuePtr = static_cast<uint16_t*>(valueAddress);
+  MsgLog(logger,info,"copyValueFldToUnRolled EpicsPvCtrlEnum el=" << el);
+  *valuePtr = psanaVar.value(el);  
+}
+
 hid_t createH5TypeId_epicsTimeStamp() {
   hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::epicsTimeStamp));
   if (typeId < 0) MsgLog(logger, fatal, "Failed to create h5 type id for epicsTimeStamp");
@@ -449,7 +631,7 @@ hid_t createH5TypeId_epicsTimeStamp() {
 }
 
  
-{% for epicsPv in epicsPvs %}
+{% for epicsPv in epicsPvs if epicsPv['name'] != 'EpicsPvCtrlEnum' %}
 hid_t createH5TypeId_{{epicsPv['name']}}({{epicsPv['type_create_args']}}) {
   hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::{{epicsPv['name']}}));
   if (typeId < 0) MsgLog(logger, fatal, "Failed to create h5 type id for {{epicsPv['name']}}");
@@ -466,6 +648,32 @@ hid_t createH5TypeId_{{epicsPv['name']}}({{epicsPv['type_create_args']}}) {
 
 {% endfor %} 
 
+hid_t createH5TypeId_EpicsPvCtrlEnum(hid_t pvNameType, hid_t strsArrayType, int numberOfStrings) {
+  hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::EpicsPvCtrlEnum));
+  if (typeId < 0) MsgLog(logger, fatal, "Failed to create h5 type id for EpicsPvCtrlEnum");
+  herr_t status = 0;
+  status = std::min(status, H5Tinsert(typeId, "pvId", offsetof(Unroll::EpicsPvCtrlEnum, iPvId), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "dbrType", offsetof(Unroll::EpicsPvCtrlEnum, iDbrType), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "numElements", offsetof(Unroll::EpicsPvCtrlEnum, iNumElements), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "pvname", offsetof(Unroll::EpicsPvCtrlEnum, sPvName), pvNameType));
+  status = std::min(status, H5Tinsert(typeId, "status", offsetof(Unroll::EpicsPvCtrlEnum, status), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "severity", offsetof(Unroll::EpicsPvCtrlEnum, severity), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "no_str", offsetof(Unroll::EpicsPvCtrlEnum, no_str), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "strs", offsetof(Unroll::EpicsPvCtrlEnum, strs), strsArrayType));
+  size_t offsetForValue = offsetof(Unroll::EpicsPvCtrlEnum, strs) +  numberOfStrings * Psana::Epics::MAX_ENUM_STRING_SIZE;
+  status = std::min(status, H5Tinsert(typeId, "value", offsetForValue, H5T_NATIVE_UINT16));
+
+  if (status < 0) MsgLog(logger, fatal, "error inserting field into h5 typeId for EpicsPvCtrlEnum"); 
+
+  return typeId;
+}
+  
+template <>
+int getNumberStringsForCtrlEnum<Unroll::EpicsPvCtrlEnum>(boost::shared_ptr<Unroll::EpicsPvCtrlEnum::PsanaSrc> ptr) 
+{ 
+  return ptr->dbr().no_str(); 
+}
+ 
 } // Translator
 
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
