@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-12-10
+2013-12-04 David Schneider
+- hdf5 Translator backend, ndarray support
+- change epics ctrl enum h5 type id to use no_str in creating h5 type for strs
+- update comments in default_psana.cfg, document all cfg options
+
 Tag: V00-12-09
 2013-11-19 David Schneider
 - hdf5 Translator backend, fix deprecated compiler warning.
